--- a/AppleProgramming/Base.lproj/Main.storyboard
+++ b/AppleProgramming/Base.lproj/Main.storyboard
@@ -717,6 +717,9 @@
                                     <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                                     <font key="font" metaFont="cellTitle"/>
                                 </buttonCell>
+                                <connections>
+                                    <action selector="didTapButton:" target="XfG-lQ-9wD" id="wP7-jO-mtc"/>
+                                </connections>
                             </button>
                             <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ePF-kz-hGx">
                                 <rect key="frame" x="38" y="186" width="403" height="51"/>
@@ -729,6 +732,9 @@
                             </textField>
                         </subviews>
                     </view>
+                    <connections>
+                        <outlet property="label" destination="ePF-kz-hGx" id="R58-36-t0L"/>
+                    </connections>
                 </viewController>
                 <customObject id="rPt-NT-nkU" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
             </objects>
